# MonorsOS

./: .gitignore  LICENSE.md  Makefile  README.md
boot_protocol/: Cargo.toml
boot_protocol/src/: lib.rs
bootloader/uefi/: Cargo.toml
bootloader/uefi/src/: boot_menu.rs  lib.rs  main.rs
bootloader/uefi/src/arch/: mod.rs
bootloader/uefi/src/arch/x86_64/: paging.rs
bootloader/uefi/src/protocol/: file.rs
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  lib.rs  main.rs
kernel/targets/: kernel.ld  x86_64-unknown-none.json
libs/arch/x86_64/: Cargo.toml
libs/arch/x86_64/src/: address.rs  control.rs  instructions.rs  lib.rs
libs/arch/x86_64/src/paging/: mod.rs  page.rs  page_directory.rs  pdp.rs  pml4.rs
libs/elf/: Cargo.toml
libs/elf/src/: error.rs  file_header.rs  file_type.rs  identification.rs  lib.rs  loader.rs  program_header.rs  result.rs
libs/uefi/uefi_core/: Cargo.toml
libs/uefi/uefi_core/src/: boot_services.rs  configuration_table.rs  guid.rs  lib.rs  memory.rs  runtime_services.rs  status.rs  system_table.rs  table_header.rs  time.rs
libs/uefi/uefi_core/src/protocols/: mod.rs
libs/uefi/uefi_core/src/protocols/console/: mod.rs  text_input.rs  text_output.rs
libs/uefi/uefi_core/src/protocols/media/: file.rs
libs/uefi/uefi_wrapper/: Cargo.toml
libs/uefi/uefi_wrapper/src/: allocator.rs  boot_services.rs  configuration_table.rs  guid.rs  lib.rs  memory.rs  result.rs  runtime_services.rs  system_table.rs  table_header.rs  time.rs
libs/uefi/uefi_wrapper/src/protocols/: mod.rs
(+3 files in other folders)
